# fastapi_test_render_com

./: Dockerfile  Dockerfile.backup  app.py  pyproject.toml  railway.json  requirements.txt
api/hello/: routes.py
core/: config.py  create_app.py
