[tool.poetry]
name = "fastapi-app"
version = "0.1.0"
description = ""
authors = ["Esteban Maya Cadavid <emayacadavid9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
annotated-types = "0.6.0"
anyio = "4.3.0"
click = "8.1.7"
fastapi = "0.110.0"
h11 = "0.14.0"
idna = "3.6"
pydantic = "2.6.4"
pydantic-settings = "2.2.1"
pydantic-core = "2.16.3"
python-dotenv = "1.0.1"
sniffio = "1.3.1"
starlette = "0.36.3"
typing-extensions = "4.10.0"
uvicorn = "0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
